--- a/aula pratica 2/index.html
+++ b/aula pratica 2/index.html
@@ -21,24 +21,29 @@
     <main class="content"> 
         <div class="content-txt">
             <h2 class="content-txt-h2">Bicicletas Feitas a Mão </h2>
-            <p class="content-txt-p">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
-            <a href="" class="content-txt-link">Ver mais</a>
+            <p class="content-txt-p">A Nimbus Stark é a melhor Bikcraft já criada <br> pela nossa equipe. Ela vem equipada com os <br> melhores acessórios da marca.</p>
+            <a href="" class="content-txt-button">Ver mais</a>
         </div>
         <div class="content-img">
             <img src="bicicleta.jpg" alt="bikcraft-img" class="content-img-bikcraft-img">
         </div>
         <div class="content-marca">
             <h1 class="content-marca-h1">Vantagens bikcraft</h1>
+
         </div>
         <div class="content-vantage">
-            <img src="eletrica.svg" alt="" class="content-vantage-img">
-            <p> Motor Elétrico <br> Permite você viajar distâncias inimaginaveis com sua bike.</p>
-
-            <img src="velocidade.svg" alt="" class="content-vantage-img">
-            <p>40km/h <br> A mais rápida bicicleta elétrica disponivel hoje no mercado.</p>
-
-            <img src="rastreador.svg" alt="" class="content-vantage-img">
-            <p>Rastreador <br> Rastreador e sistema anti-furto para garantir o seu sossego.</p>
+            <div class="content-vantage-div1">
+                <img src="eletrica.svg" alt="" class="content-vantage-img">
+                <p class="content-vantage-txt"><span>Motor Elétrico</span> <br> Permite você   viajar distâncias <br> inimaginaveis com sua bike.</p>
+            </div>
+            <div class="content-vantage-div2">
+                <img src="velocidade.svg" alt="" class="content-vantage-img">
+                <p class="content-vantage-txt"><span>40km/h </span><br> A mais rápida bicicleta elétrica <br> disponivel hoje no mercado.</p>
+            </div>
+            <div class="content-vantage-div3">
+                <img src="rastreador.svg" alt="" class="content-vantage-img">
+                <p class="content-vantage-txt"><span>Rastreador</span> <br> Rastreador e sistema anti-furto para <br> garantir o seu sossego.</p>
+            </div>
 
         </div>
     </main>
