--- a/aula pratica 2/index.html
+++ b/aula pratica 2/index.html
@@ -48,7 +48,7 @@
         </div>
     </main>
     <footer class="rodape">
-        <a href="https://www.linkedin.com/in/roniellyson-arruda-0678a7133/" class="rodape-link" target="_blank" rel="external">Landing page por :Rone Arruda </a>
+        <a href="https://www.linkedin.com/in/roniellyson-arruda-0678a7133/" class="rodape-link" target="_blank" rel="external">Landing page por : ©Rone Arruda </a>
     </footer>
 </body>
 </html>
