--- a/aula pratica 2/index.html
+++ b/aula pratica 2/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bikcraft</title>
     <link rel="stylesheet" href="estilos/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header class="cabeca">
@@ -29,7 +29,7 @@
             <img src="bicicleta.jpg" alt="bikcraft-img" class="content-img-bikcraft-img">
         </div>
         <div class="content-marca">
-            <h1 class="content-marca-h1">Vantagens bikcraft</h1>
+            <h1 class="content-marca-h1">Vantagens <BR> bikcraft</h1>
 
         </div>
         <div class="content-vantage">
