--- a/portfolio-origamid/index.html
+++ b/portfolio-origamid/index.html
@@ -21,7 +21,7 @@
     <main class="introducao">
         <img src="img-port/0705-introducao/portfolio/img/perfil.jpg" alt="lobo cinza">
         <div>
-            <h1>Desenvolvedor Front End & Ux/Ui Designer</h1>
+            <h1>Desenvolvedor <br>Front End & <br> UX/UI Designer</h1>
             <p>Localizado no Rio de Janeiro </p>
         </div>
     </main>
