--- a/portfolio-origamid/index.html
+++ b/portfolio-origamid/index.html
@@ -110,11 +110,11 @@
                         </ul>
                     </div>
     
-                    <div class="Idiomas">
+                    <div class="idiomas">
                         <h3>Idiomas</h3>
                         <ul>
-                            <li>Inglês <span>/Fluênte</span></li>
-                            <li>Espanhol <span>Intermediário</span></li>
+                            <li>Inglês  <span> / Fluênte</span></li>
+                            <li>Espanhol  <span> / Intermediário</span></li>
                         </ul>
                     </div>
                 </div>
@@ -122,5 +122,20 @@
         </div>
         
     </section>
+    <footer class="footer" id="contato">
+        <div class="footer-container">
+            <p class="footer-texto">
+                Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma conversa 👋
+            </p>
+                <ul class="footer-contato">
+                    <li>lobo@email.com</li>
+                    <li>+55 21 9999-9999</li>
+                    <li>@instagram</li>
+                </ul>
+                    <p class="footer-copy">
+                        Alguns direitos reservados.
+                    </p>
+        </div>
+    </footer>
 </body>
 </html>
