--- a/portfolio-origamid/index.html
+++ b/portfolio-origamid/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>projeto-pessoal</title>
     <link rel="stylesheet" href="estilo/style.css">
+    <meta name="description" content="Portfólio com informações sobre competencias">
 </head>
 <body>
     <header class="header">
-        <img src="img-port/0704-header/portfolio/img/marca.svg" alt="marca">
-        <nav>
+        <img src="img-port/0704-header/portfolio/img/marca.svg" alt="marca" width="104" height="38">
+        <nav>   
             <ul class="header-menu" >
                 <li><a href="#experiencia">Experiência</a></li>
                 <li><a href="#formacao">Formação</a></li>
@@ -19,7 +20,7 @@
         </nav>
     </header> 
     <main class="introducao">
-        <img src="img-port/0705-introducao/portfolio/img/perfil.jpg" alt="lobo cinza">
+        <img src="img-port/0705-introducao/portfolio/img/perfil.jpg" alt="lobo cinza" width="360" height="520">
         <div>
             <h1>Desenvolvedor <br>Front End & <br> UX/UI Designer</h1>
             <p>Localizado no Rio de Janeiro </p>
@@ -111,6 +112,7 @@
                     </div>
     
                     <div class="idiomas">
+                        
                         <h3>Idiomas</h3>
                         <ul>
                             <li>Inglês  <span> / Fluênte</span></li>
